--- a/poker/src/components/pokerChip/PokerChip.module.css
+++ b/poker/src/components/pokerChip/PokerChip.module.css
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  width: 100px;
+  height: 100px;
 }
 
 .pokerChip::before {
@@ -61,4 +63,7 @@
 }
 .gold {
   background: #d4af37;
+}
+.yellow {
+  background: yellow;
 }
