--- a/poker/src/components/gameMenu/GameMenu.module.css
+++ b/poker/src/components/gameMenu/GameMenu.module.css
@@ -8,7 +8,7 @@
 }
 
 .cardContainer {
-  background-color: var(--secondary-dark);
+  background-color: var(--MenuBackground);
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   cursor: pointer;
